<package>
  <name>LMS1xx</name>
  <version>0.1.0</version>
  <description>Driver for SICK LMS1xx.</description>
  <maintainer email="todo@todo.todo">Konrad Banachowicz</maintainer>
  <author email="todo@todo.todo">Konrad Banachowicz</author>
  <license>GPL</license>
  <url>http://github.com/konradb3/RCPRG-ros-pkg/wiki/LMS1xx</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libLMS1xx</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>libLMS1xx</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>


